--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<title>W3.CSS Template</title>
+<title>A Blind Faith</title>
 
 <meta charset="UTF-8">
 
@@ -27,11 +27,9 @@
 
 <div class="w3-half w3-container">
 
-  <h1 class="w3-xxlarge w3-text-light-grey">Hello</h1>
-
-  <h1 class="w3-xxlarge w3-text-grey">We are</h1>
-
-  <h1 class="w3-jumbo">InShock</h1>
+  <h1 class="w3-jumbo">a Blind Faith</h1>
+  
+  <h1 class="w3-xxlarge w3-text-grey"> stories from cities</h1>
 
 </div>
 
@@ -54,7 +52,7 @@
 
 <div class="w3-panel w3-text-grey">
 
-<h4>MOST RECENT WORK:</h4>
+<h4>MOST RECENT:</h4>
 
 </div>
 
@@ -63,16 +61,6 @@
 <div class="w3-half w3-container">
 
   <img src="/w3images/house1.jpg" style="width:100%">
-
-</div>
-
-<div class="w3-half w3-container">
-
-  <img src="/w3images/house_arch.jpg" style="width:100%">
-
-  <p class="w3-xlarge w3-text-grey">
-
-  Demos, Logos, Reports, Names, Events, Media, Wordpress, Google, Books, Optimisations</p>
 
 </div>
 
@@ -85,29 +73,15 @@
 
   <div class="w3-third w3-container w3-black w3-large" style="height:250px">
 
-    <h2>Contact Info</h2>
+  </div>
 
-    <p><i class="fa fa-map-marker" style="width:30px"></i> Chicago, US</p>
-
-    <p><i class="fa fa-phone" style="width:30px"></i> Phone: +00 151515</p>
-
-    <p><i class="fa fa-envelope" style="width:30px"> </i> Email: mail@mail.com</p>
+  <div class="w3-third w3-center w3-large w3-dark-green w3-text-white" style="height:250px">
 
   </div>
 
-  <div class="w3-third w3-center w3-large w3-dark-grey w3-text-white" style="height:250px">
+  <div class="w3-third w3-center w3-large w3-green w3-text-white" style="height:250px">
 
-    <h2>Contact Us</h2>
-
-    <p>If you have an idea.</p>
-
-    <p>What are you waiting for?</p>
-
-  </div>
-
-  <div class="w3-third w3-center w3-large w3-grey w3-text-white" style="height:250px">
-
-    <h2>Like Us</h2>
+    <h2>Follow Us (soon)</h2>
 
     <i class="w3-xlarge fa fa-facebook-official"></i><br>
 
