--- a/index.html
+++ b/index.html
@@ -27,21 +27,13 @@
 
 <div class="w3-half w3-container">
 
-  <h1 class="w3-jumbo">a Blind Faith</h1>
+  <h1 class="w3-jumbo w3-text-green">a Blind Faith</h1>
   
   <h1 class="w3-xxlarge w3-text-grey"> stories from cities</h1>
 
 </div>
 
 <div class="w3-half w3-container w3-xlarge w3-text-grey">
-
-  <p class="">We build design teams
-
-  - we break things down and build it better
-
-  - we deliver the best of solutions</p>
-
-  <p>InShock means powerfull simplicity</p>
 
 </div>
 
@@ -71,27 +63,7 @@
 
 <div class="w3-row w3-section">
 
-  <div class="w3-third w3-container w3-black w3-large" style="height:250px">
-
-  </div>
-
-  <div class="w3-third w3-center w3-large w3-dark-green w3-text-white" style="height:250px">
-
-  </div>
-
-  <div class="w3-third w3-center w3-large w3-green w3-text-white" style="height:250px">
-
-    <h2>Follow Us (soon)</h2>
-
-    <i class="w3-xlarge fa fa-facebook-official"></i><br>
-
-    <i class="w3-xlarge fa fa-pinterest-p"></i><br>
-
-    <i class="w3-xlarge fa fa-twitter"></i><br>
-
-    <i class="w3-xlarge fa fa-flickr"></i><br>
-
-    <i class="w3-xlarge fa fa-linkedin"></i>
+  <div class="w3-third w3-container w3-green w3-large" style="height:250px">
 
   </div>
 
