--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
   <h1 class="w3-jumbo w3-text-green">a Blind Faith</h1>
   
-  <h1 class="w3-xxlarge w3-text-grey"> stories from cities</h1>
+  <h1 class="w3-medium w3-text-grey"> stories from cities</h1>
 
 </div>
 
-<div class="w3-half w3-container w3-xlarge w3-text-grey">
+<div class="w3-third w3-container w3-xlarge w3-text-grey">
 
 </div>
 
