--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<title>A Blind Faith</title>
+<title>a Blind Faith</title>
 
 <meta charset="UTF-8">
 
@@ -27,9 +27,9 @@
 
 <div class="w3-half w3-container">
 
-  <h1 class="w3-jumbo w3-text-green">a Blind Faith</h1>
+  <h1 class="w3-jumbo w3-text-#228B22">a Blind Faith</h1>
   
-  <h1 class="w3-medium w3-text-grey"> stories from cities</h1>
+  <h1 class="w3-large w3-text-grey"> stories from cities</h1>
 
 </div>
 
@@ -63,7 +63,7 @@
 
 <div class="w3-row w3-section">
 
-  <div class="w3-container w3-green w3-large" style="height:250px">
+  <div class="w3-container w3-#228B22 w3-large" style="height:250px">
 
   </div>
 
