--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <div class="w3-half w3-container">
 
-  <img src="/w3images/house1.jpg" style="width:100%">
+  <a href="deSoto.html" target="_self"><img src="/barbican.jpg" style="width:100%"></a>
 
 </div>
 
