--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <div class="w3-half w3-container">
 
-  <a href="deSoto.html" target="_self"><img src="/barbican.jpg" style="width:100%"></a>
+  <a href="deSoto.html" target="_self"><img src=" ablindfaith.github.io/barbican.jpg" style="width:100%"></a>
 
 </div>
 
