--- a/deSoto.html
+++ b/deSoto.html
@@ -47,15 +47,12 @@
 </div>
 
 
-<img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%">
+<img src="barbican.jpg" alt="Barbican Centre, London" style="width:50%">
 
-
-<body> AHAHAH
-
-
-<\body>
-
-
+<h1>DE SOTO</h1>
+<body> <p>AH AH AH<\p>
+<p>HON HON HON<\p>
+  
 <!-- Footer -->
 <div class="w3-row w3-section">
 <div class="w3-container w3-green w3-large" style="height:250px">
