--- a/deSoto.html
+++ b/deSoto.html
@@ -46,10 +46,8 @@
 
 </div>
 
-
-<img src="barbican.jpg" alt="Barbican Centre, London" style="width:50%">
-
-<h1>DE SOTO</h1>
+<h1 align="center">DE SOTO</h1>
+<img align="center" src="barbican.jpg" alt="Barbican Centre, London" style="width:50%">
 <body> <p>AH AH AH<\p>
 <p>HON HON HON<\p>
   
