--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 <div class="w3-half w3-container">
 
-  <h1 class="w3-jumbo w3-text-green">a Blind Faith</h1>
+  <h1 align="center" class="w3-jumbo w3-text-green">a Blind Faith</h1>
   
-  <h1 class="w3-xlarge w3-text-grey"> stories from cities</h1>
+  <h1 align="center" class="w3-xlarge w3-text-grey"> stories from cities</h1>
 
 </div>
 
