--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="w3-row">
 
-<div class="w3-half w3-container">
+<div class="w3-container">
 
   <h1 align="center" class="w3-jumbo w3-text-green">a Blind Faith</h1>
   
