--- a/deSoto.html
+++ b/deSoto.html
@@ -47,7 +47,7 @@
 </div>
 
 <h1 align="center">DE SOTO</h1>
-<img align="center" src="barbican.jpg" alt="Barbican Centre, London" style="width:50%">
+<img src="barbican.jpg" alt="Barbican Centre, London" style="width:80%" style="height:80%" align="center">
 <body> <p>AH AH AH<\p>
 <p>HON HON HON<\p>
   
