--- a/deSoto.html
+++ b/deSoto.html
@@ -47,13 +47,13 @@
 </div>
 
 <h1 align="center">DE SOTO</h1>
-<img src="barbican.jpg" alt="Barbican Centre, London" style="width:80%" style="height:80%" align="center">
+<img src="barbican.jpg" alt="Barbican Centre, London" align="center" style="width:80%" style="height:80%">
 <body> <p>AH AH AH<\p>
 <p>HON HON HON<\p>
   
 <!-- Footer -->
 <div class="w3-row w3-section">
-<div class="w3-container w3-green w3-large" style="height:250px">
+<div class="w3-container w3-green w3-large" style="height:50px">
 </div>
 </div>
 <div class="w3-container w3-text-grey">
