--- a/deSoto.html
+++ b/deSoto.html
@@ -47,7 +47,10 @@
 </div>
 
 <h1 align="center">DE SOTO</h1>
-<img src="barbican.jpg" alt="Barbican Centre, London" align="center" style="width:80%" style="height:80%">
+  
+<div class="w3-half w3-container">
+<img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%">
+</div>
 <body> <p>AH AH AH<\p>
 <p>HON HON HON<\p>
   
