--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body class="w3-content" style="max-width:1200px">
 
+<div class="w3-panel">
+<i class="w3-xlarge fa fa-bars"></i>
+</div>
+
 
 <!-- First Grid: Logo & About -->
 
