--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
-<i class="w3-xlarge fa fa-bars"></i>
-</div>
+<a href="deSoto.html" target="_self"><img src="home.png" alt="Home" style="width:10%"></a></div>
 
 
 <!-- First Grid: Logo & About -->
