--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
-<a href="deSoto.html" target="_self"><img src="home.png" alt="Home" style="width:10%"></a></div>
-
+<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:3%"></a></div>
+<\div>
 
 <!-- First Grid: Logo & About -->
 
