--- a/deSoto.html
+++ b/deSoto.html
@@ -37,6 +37,8 @@
 
 <body class="w3-content" style="max-width:1200px">
 
+<div class="w3-panel">
+<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:5%"></a></div>
 
 <h1 align="center">DE SOTO</h1>
   
