--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
-<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:5%"></a></div>
+<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:10%"></a></div>
 
 <!-- First Grid: Logo & About -->
 
@@ -23,7 +23,7 @@
 
 <div class="w3-container">
 
-  <h1 align="center" class="w3-jumbo w3-text-green">a Blind Faith</h1>
+  <h1 align="center" class="w3-jumbo w3-text-green">blind.faith</h1>
   
   <h1 align="center" class="w3-xlarge w3-text-grey"> stories from cities</h1>
 
