--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div class="w3-container">
 
-  <h1 align="center" class="w3-jumbo w3-text-green">blind.faith</h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH<\b></h1>
   
   <h1 align="center" class="w3-xlarge w3-text-grey"> stories from cities</h1>
 
