--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
 <div class="w3-container">
 
-  <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH<\b></h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
   
-  <h1 align="center" class="w3-xlarge w3-text-grey"> stories from cities</h1>
+  <h1 align="center" class="w3-xlarge w3-text-grey"><b>URBAN TALES</h1>
 
 </div>
 
