--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  
+p {
+    font-family: "Times New Roman", Times, serif;
+}
 
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
+  
 <a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
 
+  
 <!-- First Grid: Logo & About -->
 
 <div class="w3-row">
