--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  
-p {
-    font-family: "Times New Roman", Times, serif;
-}
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+  
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
