--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
   
 <body class="w3-content" style="max-width:1200px">
 
@@ -25,7 +23,7 @@
 
 <div class="w3-container">
 
-  <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
+  <h1 align="center" font="https://fonts.googleapis.com/css?family=Lobster" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
   
   <h1 align="center" class="w3-xlarge w3-text-grey"><b>URBAN TALES</h1>
 
