--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=brick-sign">
   
 <body class="w3-content" style="max-width:1200px">
 
@@ -20,13 +21,13 @@
 <!-- First Grid: Logo & About -->
 
 <div class="w3-row">
-
-<div class="w3-container">
-
-  <h1 align="center" font="https://fonts.googleapis.com/css?family=Lobster" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
   
+<div class="w3-container w3-lobster font-effect-brick-sign">
+  <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
+</div>
+  
+<div class="w3-container>    
   <h1 align="center" class="w3-xlarge w3-text-grey"><b>URBAN TALES</h1>
-
 </div>
 
 <div class="w3-third w3-container w3-xlarge w3-text-grey">
