--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 <!-- First Grid: Logo & About -->
 
 <div class="w3-row">
-  
+
+<style>
+.w3-lobster {
+    font-family: "Lobster", Sans-serif;
+}
+</style>
 <div class="w3-container w3-lobster font-effect-brick-sign">
   <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
-</div>
-  
-<div class="w3-container>    
   <h1 align="center" class="w3-xlarge w3-text-grey"><b>URBAN TALES</h1>
 </div>
 
