--- a/deSoto.html
+++ b/deSoto.html
@@ -40,7 +40,8 @@
 <div class="w3-panel">
 <a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
 
-<h1 align="center"><b>DE SOTO<\b></h1>
+<h1 align="center"><b>DE SOTO</h1>
+</div>
   
 <div class="w3-half w3-container">
 <img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%">
