--- a/deSoto.html
+++ b/deSoto.html
@@ -40,7 +40,7 @@
 <div class="w3-panel">
 <a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
 
-<b><h1 align="center">DE SOTO</h1><\b>
+<h1 align="center">DE SOTO</h1>
 </div>
   
 <div class="w3-half w3-container">
