--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
 
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
+  THE STORY OF A GUY SAYING HON HON HON
+  
 </div>
+  
+  <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
+  THE STORY OF A GUY SAYING HON HON HON
+  
 </div>
 
 
