--- a/index.html
+++ b/index.html
@@ -22,14 +22,9 @@
 
 <div class="w3-row">
 
-<style>
-.w3-lobster {
-    font-family: "Lobster", Sans-serif;
-}
-</style>
 <div class="w3-container w3-lobster font-effect-brick-sign">
-  <h1 align="center" class="w3-jumbo w3-text-green"><b>BLIND-FAITH</h1>
-  <h1 align="center" class="w3-xlarge w3-text-grey"><b>URBAN TALES</h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND-FAITH</strong></h1>
+  <h1 align="center" class="w3-xlarge w3-text-grey"><strong>URBAN TALES</strong></h1>
 </div>
 
 <div class="w3-third w3-container w3-xlarge w3-text-grey">
@@ -56,6 +51,9 @@
   THE STORY OF A GUY SAYING HON HON HON
   
 </div>
+
+
+<div class="w3-half w3-container">
   
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
@@ -63,6 +61,13 @@
   
 </div>
 
+<div class="w3-third w3-container">
+  
+  <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
+
+  THE STORY OF A GUY SAYING HON HON HON
+  
+</div>
 
 <!-- Footer -->
 
