--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
   THE STORY OF A GUY SAYING HON HON HON
   
 </div>  
+  
+<div class="w3-third w3-container">
+  
+  <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
+
+  THE STORY OF A GUY SAYING HON HON HON
+  
+</div>  
 
 
 <div class="w3-half w3-container">
