--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- Second Grid: Resent -->
 
 <div class="w3-panel w3-text-grey">
-
+  
 <h4>MOST RECENT:</h4>
 
 </div>
@@ -69,7 +69,7 @@
 </div>  
 
 
-<div class="w3-half w3-container">
+<div class="w3-third w3-container">
   
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
@@ -84,6 +84,14 @@
   THE STORY OF A GUY SAYING HON HON HON
   
 </div>
+  
+<div class="w3-third w3-container">
+  
+  <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
+
+  THE STORY OF A GUY SAYING HON HON HON
+  
+</div>  
 
 <!-- Footer -->
 
