--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class="w3-row">
 
-<div class="w3-twothird w3-container">
+<div class="w3-half w3-container">
 
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
@@ -52,22 +52,13 @@
   
 </div>
   
-<div class="w3-third w3-container">
+<div class="w3-half w3-container">
   
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
   THE STORY OF A GUY SAYING HON HON HON
   
 </div>  
-  
-<div class="w3-third w3-container">
-  
-  <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
-
-  THE STORY OF A GUY SAYING HON HON HON
-  
-</div>  
-
 
 <div class="w3-third w3-container">
   
