--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
-  THE STORY OF A GUY SAYING HON HON HON
+  THE STORY OF A GUY SAYING HON HON HON (BUT SOMETIMES ALSO JA JA JA)
   
 </div>  
 
