--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 
 <div class="w3-panel">
   
-<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
-
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-green w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
+    <a href="#home" class="w3-bar-item w3-button">BLIND-FAITH</a>
     <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right">
-      <a href="#home" class="w3-bar-item w3-button">Projects</a>
+    <div class="w3-left w3-hide-small">
+      <a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
+      <a href="#home" class="w3-bar-item w3-button">Home</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
