--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
   
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-green w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button">BLIND-FAITH</a>
+  <div class="w3-white w3-padding w3-card">
+    <a href="index.html" class="w3-bar-item">BLIND-FAITH</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-left w3-hide-small">
-      <a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
-      <a href="#home" class="w3-bar-item w3-button">Home</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#home" class="w3-bar-item">Home</a>
+      <a href="#about" class="w3-bar-item">About</a>
+      <a href="#contact" class="w3-bar-item">Contact</a>
     </div>
   </div>
 </div>
