--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
   
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-white w3-padding w3-card">
+  <div class="w3-green w3-padding">
     <a href="index.html" class="w3-bar-item">BLIND-FAITH</a>
     <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-left w3-hide-small">
-      <a href="#home" class="w3-bar-item">Home</a>
+    <div class="w3-top w3-hide-small">
       <a href="#about" class="w3-bar-item">About</a>
       <a href="#contact" class="w3-bar-item">Contact</a>
     </div>
