--- a/index.html
+++ b/index.html
@@ -15,13 +15,43 @@
 
 <div class="w3-panel">
   
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-green">
-    <a href="index.html" class="w3-bar-item">BLIND-FAITH</a>
-    <a href="#about" class="w3-bar-item">About</a>
-    <a href="#contact" class="w3-bar-item">Contact</a>
-  </div>
+
+.navbar {
+  overflow: hidden;
+  background-color: blue;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: green;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: red;
+  color: white;
+}
+
+.main {
+  padding: 16px;
+  margin-bottom: 30px;
+  height: 1500px; /* Used in this example to enable scrolling */
+}
+</style>
+</head>
+<body>
+
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">About</a>
+  <a href="#contact">Contact</a>
 </div>
   
 <!-- First Grid: Logo & About -->
