--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 <div class="w3-panel">
   
-
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {margin:0;}
+  
 .navbar {
   overflow: hidden;
   background-color: blue;
