--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {margin:0;}
   
 .navbar {
   overflow: hidden;
-  background-color: blue;
+  background-color: green;
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -31,7 +31,7 @@ body {margin:0;}
 .navbar a {
   float: left;
   display: block;
-  color: green;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -39,8 +39,8 @@ body {margin:0;}
 }
 
 .navbar a:hover {
-  background: red;
-  color: white;
+  background: white;
+  color: grey;
 }
 
 .main {
@@ -53,9 +53,9 @@ body {margin:0;}
 <body>
 
 <div class="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">About</a>
-  <a href="#contact">Contact</a>
+  <a href="#home">HOME</a>
+  <a href="#news">ABOUT</a>
+  <a href="#contact">CONTACT</a>
 </div>
   
 <!-- First Grid: Logo & About -->
