--- a/deSoto.html
+++ b/deSoto.html
@@ -34,6 +34,11 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<div class="navbar">
+  <a href="#home">HOME</a>
+  <a href="#news">ABOUT</a>
+  <a href="#contact">CONTACT</a>
+</div>
 
 <body class="w3-content" style="max-width:1200px">
 
