--- a/deSoto.html
+++ b/deSoto.html
@@ -35,9 +35,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="navbar">
-  <a href="#home">HOME</a>
-  <a href="#news">ABOUT</a>
-  <a href="#contact">CONTACT</a>
+<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
+<a href="index.html" target="_self"><img src="question mark.png" alt="Home" style="width:7%"></a></div>
+<a href="index.html" target="_self"><img src="mail.png" alt="Home" style="width:7%"></a></div>
 </div>
 
 <body class="w3-content" style="max-width:1200px">
