--- a/deSoto.html
+++ b/deSoto.html
@@ -34,16 +34,15 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class="navbar">
-<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
-<a href="index.html" target="_self"><img src="question mark.png" alt="Home" style="width:7%"></a></div>
-<a href="index.html" target="_self"><img src="mail.png" alt="Home" style="width:7%"></a></div>
+<div class="navbar w3-padding-large">
+  <a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
+  <a href="index.html" target="_self"><img src="question mark.png" alt="Home" style="width:7%"></a></div>
+  <a href="index.html" target="_self"><img src="mail.png" alt="Home" style="width:7%"></a></div>
 </div>
 
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
-<a href="index.html" target="_self"><img src="home.png" alt="Home" style="width:7%"></a></div>
 
 <h1 align="center"><strong>DE SOTO</strong></h1>
 </div>
