--- a/index.html
+++ b/index.html
@@ -14,48 +14,11 @@
 <body class="w3-content" style="max-width:1200px">
 
 <div class="w3-panel">
-  
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {margin:0;}
-  
-.navbar {
-  overflow: hidden;
-  background-color: green;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
 
-.navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a:hover {
-  background: white;
-  color: grey;
-}
-
-.main {
-  padding: 16px;
-  margin-bottom: 30px;
-  height: 1500px; /* Used in this example to enable scrolling */
-}
-</style>
-</head>
-<body>
-
-<div class="navbar">
-  <a href="#home">HOME</a>
-  <a href="#news">ABOUT</a>
-  <a href="#contact">CONTACT</a>
+<div class="navbar w3-bar w3-padding-large">
+  <a href="index.html"><img src="home.png" alt="Home" style="width:5%"></a>
+  <a href="index.html"><img src="question mark.png" alt="Home" style="width:5%"></a>
+  <a href="index.html"><img src="mail.png" alt="Home" style="width:5%"></a>
 </div>
   
 <!-- First Grid: Logo & About -->
