--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <div class="w3-panel">
 
 <div class="navbar w3-bar w3-padding-large">
-  <a href="index.html"><img src="home.png" alt="Home" style="width:5%"></a>
-  <a href="index.html"><img src="question mark.png" alt="Home" style="width:5%"></a>
-  <a href="index.html"><img src="mail.png" alt="Home" style="width:5%"></a>
+  <a href="index.html"><img src="home.png" alt="Home" style="width:10%"></a>
+  <a href="index.html"><img src="question mark.png" alt="Home" style="width:10%"></a>
+  <a href="index.html"><img src="mail.png" alt="Home" style="width:10%"></a>
 </div>
   
 <!-- First Grid: Logo & About -->
 
 <div class="w3-row">
 
-<div class="w3-container w3-lobster font-effect-brick-sign">
+<div class="w3-container">
   <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND-FAITH</strong></h1>
   <h1 align="center" class="w3-xlarge w3-text-grey"><strong>URBAN TALES</strong></h1>
 </div>
