--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="w3-row">
 
 <div class="w3-container">
-  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND-FAITH</strong></h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND FAITH</strong></h1>
   <h1 align="center" class="w3-xlarge w3-text-grey"><strong>URBAN TALES</strong></h1>
 </div>
 
