--- a/About.html
+++ b/About.html
@@ -100,52 +100,12 @@
 
 
 
-<h1 align="center"><strong>CONTACT US</strong></h1>
+<h1 align="center"><strong>ABOUT US</strong></h1>
 
 
- <!-- Contact section -->
+<body>
 
-  <div class="w3-container w3-light-grey w3-padding-32 w3-padding-large" id="contact">
-
-    <div class="w3-content" style="max-width:600px">
-
-      <h4 class="w3-center"><b>Contact Me</b></h4>
-
-      <p>Do you have a story to tell? Write us!</p>
-
-      <form action="/action_page.php" target="_blank">
-
-        <div class="w3-section">
-
-          <label>Name</label>
-
-          <input class="w3-input w3-border" type="text" name="Name" required>
-
-        </div>
-
-        <div class="w3-section">
-
-          <label>Email</label>
-
-          <input class="w3-input w3-border" type="text" name=“eMail" required>
-
-        </div>
-
-        <div class="w3-section">
-
-          <label>Message</label>
-
-          <input class="w3-input w3-border" type="text" name="Message" required>
-
-        </div>
-
-        <button type="submit" class="w3-button w3-block w3-green w3-margin-bottom">Send Message</button>
-
-      </form>
-
-    </div>
-
-  </div>
+Hi, there.
 
 
 </div>
