--- a/deSoto.html
+++ b/deSoto.html
@@ -34,10 +34,11 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
 <div class="navbar w3-bar w3-padding-large">
   <a href="index.html"><img src="home.png" alt="Home" style="width:10%"></a>
-  <a href="index.html"><img src="question mark.png" alt="Home" style="width:10%"></a>
-  <a href="index.html"><img src="mail.png" alt="Home" style="width:10%"></a>
+  <a href="About.html"><img src="question mark.png" alt="Home" style="width:10%"></a>
+  <a href="Contact.html"><img src="mail.png" alt="Home" style="width:10%"></a>
 </div>
 
 <body class="w3-content" style="max-width:1200px">
