--- a/Contact.html
+++ b/Contact.html
@@ -104,6 +104,8 @@
 
 
  <!-- Contact section -->
+ 
+ <form action="mailto:ask.blindfaith@protonmail.com" method="post" enctype="text/plain">
 
   <div class="w3-container w3-green w3-padding-32 w3-padding-large" id="contact">
 
@@ -147,6 +149,7 @@
 
   </div>
 
+</form>
 
 </div>
 
