--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
 
 
 
-<title>article</title>
+<title>Contact Us</title>
 
 
 
@@ -107,13 +107,13 @@
  
  <form action="mailto:ask.blindfaith@protonmail.com" method="post" enctype="text/plain">
 
-  <div class="w3-container w3-green w3-padding-32 w3-padding-large" id="contact">
+  <div class="w3-container w3-white w3-padding-32 w3-padding-large" id="contact">
 
     <div class="w3-content" style="max-width:600px">
 
       <h4 class="w3-center"><b>Contact Me</b></h4>
 
-      <p>Do you have a story to tell? Write us!</p>
+      <p>Do you have a story to tell? Write us at ask.blindfaith [at] protonmail.com!</p>
 
       <form action="/action_page.php" target="_blank">
 
