--- a/Contact.html
+++ b/Contact.html
@@ -76,13 +76,13 @@
 <div class="navbar w3-bar w3-padding-large">
 
 
-<a href="index.html"><img src="home.png" alt="Home" style="width:10%"></a>
+<a href="index.html"><img src="home.png" alt="Home" style="width:7%"></a>
 
 
-<a href="About.html"><img src="question mark.png" alt="Home" style="width:10%"></a>
+<a href="About.html"><img src="question mark.png" alt="Home" style="width:7%"></a>
 
 
-<a href="Contact.html"><img src="mail.png" alt="Home" style="width:10%"></a>
+<a href="Contact.html"><img src="mail.png" alt="Home" style="width:7%"></a>
 
 
 </div>
@@ -111,9 +111,8 @@
 
     <div class="w3-content" style="max-width:600px">
 
-      <h4 class="w3-center"><b>Contact Me</b></h4>
 
-      <p>Do you have a story to tell? Write us at ask.blindfaith [at] protonmail.com!</p>
+      <p>Do you have a story to tell? Fill in the form or write us at ask.blindfaith [at] protonmail.com!</p>
 
       <form action="/action_page.php" target="_blank">
 
