--- a/Contact.html
+++ b/Contact.html
@@ -102,7 +102,6 @@
 
 <h1 align="center"><strong>CONTACT US</strong></h1>
 
-
  <!-- Contact section -->
  
  <form action="mailto:ask.blindfaith@protonmail.com" method="post" enctype="text/plain">
@@ -112,35 +111,11 @@
     <div class="w3-content" style="max-width:600px">
 
 
-      <p>Do you have a story to tell? Fill in the form or write us at ask.blindfaith [at] protonmail.com!</p>
+      <p>Do you have a story to tell? Contact us at ask.blindfaith [at] protonmail.com!</p>
 
       <form action="/action_page.php" target="_blank">
 
-        <div class="w3-section">
-
-          <label>Name</label>
-
-          <input class="w3-input w3-border" type="text" name="Name" required>
-
-        </div>
-
-        <div class="w3-section">
-
-          <label>Email</label>
-
-          <input class="w3-input w3-border" type="text" name="eMail" required>
-
-        </div>
-
-        <div class="w3-section">
-
-          <label>Message</label>
-
-          <input class="w3-input w3-border" type="text" name="Message" required>
-
-        </div>
-
-        <button type="submit" class="w3-button w3-block w3-green w3-margin-bottom">Send Message</button>
+        <button type="submit" class="w3-button w3-block w3-green w3-margin-bottom">Write us!</button>
 
       </form>
 
