--- a/About.html
+++ b/About.html
@@ -95,11 +95,16 @@
 <h1 align="center"><strong>ABOUT US</strong></h1>
 
 
-<body>
+<div class="w3-container w3-white w3-padding-32 w3-padding-large" id="contact">
 
-Hi, there.
+    <div class="w3-content" style="max-width:600px">
 
 
+<p>Hi there! This is a personal blog where I write about issues related to urban spaces. 
+   Sometimes I will host contributions from other people, but mostly it will be me writing.
+   If you wish to send me or ask me anything, just press the email logo
+   on the top left of the page and write me an email. Looking forward to hearing from you! </p>
+      
 </div>
 
 
