--- a/Contact.html
+++ b/Contact.html
@@ -116,6 +116,8 @@
       <form action="/action_page.php" target="_blank">
 
         <button type="submit" class="w3-button w3-block w3-green w3-margin-bottom">Write us!</button>
+       
+       (Sadly the button does not work on mobiles, sorry!)
 
       </form>
 
