--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 </div>  
 
 <div style="clear: both;"></div>
-
+<div style="clear: both;"></div>
+<div style="clear: both;"></div>
+  
+  
 <!-- Footer -->
 
 <div class="w3-row w3-section">
