--- a/About.html
+++ b/About.html
@@ -107,7 +107,10 @@
       
 </div>
 
-
+<div style="clear: both;"></div>
+<div style="clear: both;"></div>
+<div style="clear: both;"></div>
+  
 <!-- Footer -->
 
 
