--- a/Contact.html
+++ b/Contact.html
@@ -128,7 +128,10 @@
 </form>
 
 </div>
-
+ 
+<div style="clear: both;"></div>
+<div style="clear: both;"></div>
+<div style="clear: both;"></div>
 
 <!-- Footer -->
 
