--- a/About.html
+++ b/About.html
@@ -107,9 +107,9 @@
       
 </div>
 
-<div style="clear: both;"></div>
-<div style="clear: both;"></div>
-<div style="clear: both;"></div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   
 <!-- Footer -->
 
