--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
   THE STORY OF A GUY SAYING HON HON HON
   
 </div>  
+  
+<p>&nbsp;</p>  
 
 <div class="w3-third w3-container">
   
@@ -87,16 +89,16 @@
   
 </div>  
 
-<div style="clear: both;"></div>
-<div style="clear: both;"></div>
-<div style="clear: both;"></div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   
   
 <!-- Footer -->
 
 <div class="w3-row w3-section">
 
-  <div class="w3-container w3-green w3-large" style="height:150px">
+  <div class="w3-container w3-green w3-large" style="height:100px">
 
   </div>
 
