--- a/deSoto.html
+++ b/deSoto.html
@@ -47,6 +47,9 @@
 
 <h1 align="center"><strong>DE SOTO</strong></h1>
 </div>
+<div class="w3-container w3-text-grey">
+<h3 align="center">27 April 2018</h3>
+</div>
   
 <div class="w3-half w3-container">
 <img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%">
@@ -54,13 +57,13 @@
   
 <p>HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON v v HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HON HONHON HON HON <\p>
 
-<div style="clear: both;"></div>
-<div style="clear: both;"></div>
-<div style="clear: both;"></div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
   
 <!-- Footer -->
 <div class="w3-row w3-section">
-<div class="w3-container w3-green w3-large" style="height:150px">
+<div class="w3-container w3-green w3-large" style="height:100px">
 </div>
 </div>
 <div class="w3-container w3-text-grey">
