--- a/deSoto.html
+++ b/deSoto.html
@@ -48,8 +48,9 @@
 <h1 align="center"><strong>DE SOTO</strong></h1>
 </div>
 <div class="w3-container w3-text-grey">
-<h3 align="center">27 April 2018</h3>
+<h4 align="center">27 April 2018</h4>
 </div>
+<p>&nbsp;</p>
   
 <div class="w3-half w3-container">
 <img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%">
