--- a/deSoto.html
+++ b/deSoto.html
@@ -48,7 +48,7 @@
 <h1 align="center"><strong>DE SOTO</strong></h1>
 </div>
 <div class="w3-container w3-text-grey">
-<h4 align="center">27 April 2018</h4>
+<h4 align="center">27.04.2018</h4>
 </div>
 <p>&nbsp;</p>
   
