--- a/About.html
+++ b/About.html
@@ -108,8 +108,6 @@
 </div>
 
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
   
 <!-- Footer -->
 
@@ -129,7 +127,7 @@
 <div class="w3-container w3-text-grey">
 
 
-<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+<p>Graphics by me. Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 
 
 </div>
