--- a/Contact.html
+++ b/Contact.html
@@ -129,8 +129,6 @@
 
 </div>
  
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 <!-- Footer -->
 
 
@@ -149,7 +147,7 @@
 <div class="w3-container w3-text-grey">
 
 
-<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+<p>Graphics by me. Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 
 
 </div>
