--- a/index.html
+++ b/index.html
@@ -90,9 +90,6 @@
 </div>  
 
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-  
   
 <!-- Footer -->
 
@@ -105,7 +102,7 @@
 </div>
 
 <div class="w3-container w3-text-grey">
-
+<p>Graphics by me. Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </div>
 
 
