--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 
-<title>Blind-Faith</title>
+<title><img src="logo.png" style="width:100%">Blind-Faith</title>
 
 <meta charset="UTF-8">
 
