--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <html>
 
-<title><img src="logo.png" style="width:100%">Blind-Faith</title>
+<head>
+ <link rel="logo.png"> Blind Faith 
+</head>
 
 <meta charset="UTF-8">
 
