--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>  
 
-<title>Blind Faith</title>
+<title><img src="Logo.png" style="width:100%"></title>
 
 <meta charset="UTF-8">
 
