--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="w3-half w3-container">
 
-  <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
+  <a href="deSoto.html" target="_self"><img src="Logo.png" style="width:100%"></a>
 
   THE STORY OF A GUY SAYING HON HON HON
   
