--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>  
 
 <title>
-  <img src="Logo.png" style="width:100%">
+  Blind Faith
 </title>
 
 <meta charset="UTF-8">
@@ -32,7 +32,7 @@
 <div class="w3-row">
 
 <div class="w3-container">
-  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND FAITH</strong></h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><strong><img src="Logo.png" style="width:100%"></strong></h1>
   <h1 align="center" class="w3-xlarge w3-text-grey"><strong>URBAN TALES</strong></h1>
 </div>
 
