--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 <div class="w3-row">
 
 <div class="w3-container">
-  <h1 align="center" class="w3-jumbo w3-text-green"><strong><img src="Logo.png" style="width:80%"></strong></h1>
-  <h1 align="center" class="w3-xlarge w3-text-grey"><strong>URBAN TALES</strong></h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND <img src="Logo.png" style="width:80%"> FAITH</strong></h1>
 </div>
 
 <div class="w3-third w3-container w3-xlarge w3-text-grey">
