--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="w3-row">
 
 <div class="w3-container">
-  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND<img src="Logo.png" style="width:40%">FAITH</strong></h1>
+  <h1 align="center" class="w3-jumbo w3-text-green"><strong>BLIND<\br><img src="Logo.png" style="width:25%"><\br>FAITH</strong></h1>
 </div>
 
 <div class="w3-third w3-container w3-xlarge w3-text-grey">
