--- a/About.html
+++ b/About.html
@@ -102,7 +102,7 @@
     <div class="w3-content" style="max-width:600px">
 
 
-<p>Hi there! This is a personal blog where I write about issues related to urban spaces. 
+<p>Hi there! This is a personal blog. 
    Sometimes I will host contributions from other people, but mostly it will be me writing.
    If you wish to send me or ask me anything, just press the email logo
    on the top left of the page and write me an email. Looking forward to hearing from you! </p>
