--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <div class="w3-panel w3-text-grey">
   
-<h4>MOST RECENT:</h4>
+<h4>MOST RECENTS:</h4>
 
 </div>
 
@@ -60,7 +60,7 @@
   
 </div>
   
-<div class="w3-half w3-container">
+<!-- <div class="w3-half w3-container">
   
   <a href="deSoto.html" target="_self"><img src="barbican.jpg" alt="Barbican Centre, London" style="width:100%"></a>
 
@@ -94,7 +94,7 @@
   
 </div>  
 
-<p>&nbsp;</p>
+<p>&nbsp;</p> -->
   
 <!-- Footer -->
 
