--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   THE STORY OF A GUY SAYING HON HON HON
   
-  <p><\p>
+  
 
 </div>
   
@@ -94,9 +94,9 @@
 
   THE STORY OF A GUY SAYING HON HON HON
   
-</div>  
+</div> -->
 
-<p>&nbsp;</p> -->
+<p>&nbsp;</p> 
   
 <!-- Footer -->
 
